deploy/resilio/resilio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: resilio
  namespace: resilio
spec:
  rules:
  - host: resilio.nuc.one
    http:
      paths:
      - backend:
          service:
            name: resilio
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
